# claude-ai-memory

./: .gitignore  LICENSE  README.md  README_CN.md  docker-compose.yml  pyproject.toml  pytest.ini
config/: ov.conf.example
docs/plans/: 2026-03-01-claude-ai-memory-design.md  2026-03-01-claude-ai-memory-implementation.md
embedding-service/: Dockerfile  main.py  requirements.txt
mcp_server/: models.py  project_manager.py  server.py  viking_client.py
scripts/: inject-claude-md.sh  setup.sh
tests/e2e/: test_full_workflow.py
tests/integration/: test_embedding.py  test_mcp_tools.py
tests/unit/: test_models.py  test_project_manager.py  test_viking_client.py
