[project]
name = "claude-ai-memory"
version = "0.1.0"
description = "MCP Server for Claude Code project context memory"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "openviking>=0.2.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
claude-ai-memory = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]
